# pytest-idempotent

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest_idempotent.py  ruff.toml  setup.cfg
.github/workflows/: test.yml
pytest_idempotent/: __init__.py
tests/: plugin_test.py  utils.py
tests/test_files/: test_class.py  test_config.py  test_correct.py  test_correct_behavior.py  test_custom_decorator.py  test_equal_return.py  test_equal_return_fail.py  test_equal_return_pass.py  test_error.py  test_fail_to_raise_expected_exception.py  test_first_failed_skip_second.py  test_first_missing_skip_second.py  test_incorrect_but_idempotent.py  test_missing_check.py  test_missing_marker_fail.py  test_missing_marker_ignore.py  test_missing_marker_in_try_except.py  test_missing_marker_method_override.py  test_missing_marker_pass.py  test_nested_idempotent_functions.py  test_not_idempotent.py  test_raises_expected_exception.py  test_raises_expected_exception_missing.py  test_raises_unexpected_exception.py  test_warn_unnecessary_marker.py
tests/test_files/src/: decorator.py
