[project]
name = "pytest_idempotent"
version = "1.3.1"
description = "Pytest plugin for testing function idempotence."
authors = [
    { name = "Tyler Yep", email = "tyep@cs.stanford.edu" },
]
readme = "README.md"
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Framework :: Pytest",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "types-setuptools",
]

[project.urls]
Homepage = "https://github.com/tyleryep/pytest-idempotent"

[project.entry-points.pytest11]
pytest_idempotent = "pytest_idempotent"

[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
    "tests.*.*",
    "tests.*.*.*",
]
namespaces = false

[tool.setuptools.package-data]
pytest_idempotent = [
    "py.typed",
]

[tool.mypy]
strict = true
warn_unreachable = true
disallow_any_unimported = true
extra_checks = true
enable_error_code = "explicit-override,ignore-without-code"

[tool.ruff]
target-version = "py38"
lint.select = ["ALL"]
lint.ignore = [
	"ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
	"C901",    # function is too complex (12 > 10)
	"COM812",  # Trailing comma missing
	"D",       # Docstring rules
	"EM101",   # Exception must not use a string literal, assign to variable first
	"EM102",   # Exception must not use an f-string literal, assign to variable first
	"ERA001",  # Found commented-out code
	"FBT001",  # Boolean positional arg in function definition
	"FBT002",  # Boolean default value in function definition
	"FBT003",  # Boolean positional value in function call
	"FIX002",  # Line contains TODO
	"PLR0911", # Too many return statements (11 > 6)
	"PLR2004", # Magic value used in comparison, consider replacing 2 with a constant variable
	"PLR0912", # Too many branches
	"PLR0913", # Too many arguments to function call
	"PLR0915", # Too many statements
	"S101",    # Use of `assert` detected
	"S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
	"T201",    # print() found
	"T203",    # pprint() found
	"TD002",  # Missing author in TODO; try: `# TODO(<author_name>): ...`
	"TD003",  # Missing issue link on the line following this TODO
	"TD005",  # Missing issue description after `TODO`
	"TRY003", # Avoid specifying long messages outside the exception class

	# pytest-idempotent-specific ignores
	"N818",   # Exception name `ReturnValuesNotEqual` should be named with an Error suffix
	"TRY002", # Do not raise Exception
]
