[metadata]
name = pytest_idempotent
version = 0.0.2
description = Pytest plugin for testing function idempotence.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/pytest-idempotent
author = Tyler Yep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
py_modules = pytest_idempotent
python_requires = >=3.5
include_package_data = True

[options.entry_points]
pytest11 =
    pytest_idempotent = pytest_idempotent

[options.package_data]
pytest_idempotent = py.typed

[mypy]
strict = True
show_error_codes = True

[pylint.MASTER]
load-plugins = pylint_strict_informational

[pylint.MESSAGES CONTROL]
enable =
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
disable =
    line-too-long,  # Covered by flake8
    missing-docstring,
    invalid-name,
    duplicate-code,
    too-few-public-methods,

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,F401
