[metadata]
name = pytest_idempotent
version = 1.3.1
description = Pytest plugin for testing function idempotence.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/pytest-idempotent
author = Tyler Yep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
exclude = tests, tests.*, tests.*.*, tests.*.*.*

[options.entry_points]
pytest11 =
    pytest_idempotent = pytest_idempotent

[options.package_data]
pytest_idempotent = py.typed

[mypy]
strict = True
warn_unreachable = True
disallow_any_unimported = True
extra_checks = True
enable_error_code = explicit-override,ignore-without-code
